add spatial autocorrelation

--- a/development/NB_spatial_autocorrelation.ipynb
+++ b/development/NB_spatial_autocorrelation.ipynb
@@ -24,6 +24,7 @@
     "from stimage._data_generator import DataGenerator\n",
     "import tensorflow as tf\n",
     "import seaborn as sns\n",
+    "sns.set_style(\"white\")\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "import numpy as np"
@@ -35,7 +36,24 @@
    "id": "equipped-delight",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy import stats\n",
+    "\n",
+    "def plot_correlation(df, attr_1, attr_2):\n",
+    "    r = stats.pearsonr(df[attr_1], \n",
+    "                       df[attr_2])[0] **2\n",
+    "\n",
+    "    g = sns.lmplot(data=df,\n",
+    "        x=attr_1, y=attr_2,\n",
+    "        height=5, legend=True\n",
+    "    )\n",
+    "    # g.set(ylim=(0, 360), xlim=(0,360))\n",
+    "\n",
+    "    g.set_axis_labels(attr_1, attr_2)\n",
+    "    plt.annotate(r'$R^2:{0:.2f}$'.format(r),\n",
+    "                (max(df[attr_1])*0.9, max(df[attr_2])*0.9))\n",
+    "    return g"
+   ]
   },
   {
    "cell_type": "code",
@@ -217,7 +235,9 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "educational-advisory",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "for i in gene_list:\n",
@@ -234,19 +254,17 @@
    },
    "outputs": [],
    "source": [
-    "gene_plot(test_dataset, genes=\"RPL41\", spot_size=8)"
+    "gene_plot(test_dataset, genes=\"COX6C\", spot_size=8)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "thousand-westminster",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gene_plot(test_dataset, genes=\"COX6C\", spot_size=8)"
+    "gene_plot(test_dataset, genes=\"KRT5\", spot_size=8)"
    ]
   },
   {
@@ -281,215 +299,228 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arbitrary-latin",
+   "id": "preceding-watts",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from lime import lime_image\n",
-    "explainer = lime_image.LimeImageExplainer()"
+    "import matplotlib.pyplot as plt\n",
+    "from libpysal.weights.contiguity import Queen\n",
+    "from libpysal import examples\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import geopandas as gpd\n",
+    "import os\n",
+    "import splot\n",
+    "from splot.esda import moran_scatterplot, lisa_cluster\n",
+    "from esda.moran import Moran, Moran_Local\n",
+    "from esda.moran import Moran_BV, Moran_Local_BV\n",
+    "from splot.esda import plot_moran_bv_simulation, plot_moran_bv, plot_local_autocorrelation"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "expected-angola",
+   "id": "efficient-first",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import skimage\n",
-    "from skimage.color import rgb2hed\n",
-    "from skimage.feature import peak_local_max\n",
-    "from skimage.segmentation import watershed\n",
-    "from skimage.measure import label\n",
-    "import scipy as sp\n",
-    "from scipy import ndimage as ndi\n",
-    "from skimage.morphology import area_opening\n",
-    "import math\n",
-    "from sklearn.linear_model import LinearRegression, SGDRegressor"
+    "gene = gene_list[4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "regional-feelings",
+   "id": "impaired-stick",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for image, label_ in test_gen.shuffle(200).take(1):\n",
-    "    annotation_hed = rgb2hed(image)\n",
-    "    annotation_h = annotation_hed[:,:,0]\n",
-    "    annotation_h *= 255.0 / np.percentile(annotation_h, q=90)\n",
-    "#     annotation_h = np.clip(annotation_h, a_min=0, a_max=255)\n",
-    "    thresh = skimage.filters.threshold_otsu(annotation_h)\n",
-    "    im_fgnd_mask = sp.ndimage.morphology.binary_fill_holes(\n",
-    "        annotation_h < thresh\n",
-    "    )\n",
-    "    distance = ndi.distance_transform_edt(im_fgnd_mask)\n",
-    "    coords = peak_local_max(distance, footprint=np.ones((5, 5)), labels=im_fgnd_mask)\n",
-    "    mask = np.zeros(distance.shape, dtype=bool)\n",
-    "    mask[tuple(coords.T)] = True\n",
-    "    markers, _ = ndi.label(mask)\n",
-    "    labels = watershed(annotation_h, markers, mask=im_fgnd_mask)\n",
-    "    im_nuclei_seg_mask = area_opening(labels, area_threshold=64).astype(np.int)\n",
-    "    map_dic = dict(zip(np.unique(im_nuclei_seg_mask), np.arange(len(np.unique(im_nuclei_seg_mask)))))\n",
-    "    im_nuclei_seg_mask = np.vectorize(map_dic.get)(im_nuclei_seg_mask)\n",
+    "test_dataset_.obsm[\"gpd\"] = gpd.GeoDataFrame(test_dataset_.obs,\n",
+    "                                             geometry=gpd.points_from_xy(\n",
+    "                                                 test_dataset_.obs.imagecol, \n",
+    "                                                 test_dataset_.obs.imagerow))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "governing-metropolitan",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset_.obsm[\"gpd\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "british-affiliation",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = test_dataset.to_df()[gene].values\n",
+    "y = test_dataset_.to_df()[gene].values\n",
+    "w = Queen.from_dataframe(test_dataset_.obsm[\"gpd\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "racial-anatomy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_dataset_.obsm[\"gpd\"][\"gc_{}\".format(gene)] = x\n",
+    "test_dataset_.obsm[\"gpd\"][\"pred_{}\".format(gene)] = y\n",
+    "tissue_image = test_dataset_.uns[\"spatial\"][\"block2\"][\"images\"][\"fulres\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "established-quarter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "moran = Moran(y,w)\n",
+    "moran_bv = Moran_BV(y, x, w)\n",
+    "moran_loc = Moran_Local(y, w)\n",
+    "moran_loc_bv = Moran_Local_BV(y, x, w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "weird-casino",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_correlation(test_dataset_.obsm[\"gpd\"],\n",
+    "                 \"pred_{}\".format(gene),\n",
+    "                 \"gc_{}\".format(gene))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "average-speech",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(5,5))\n",
+    "moran_scatterplot(moran_bv, ax=ax)\n",
+    "ax.set_xlabel('prediction of gene {}'.format(gene))\n",
+    "ax.set_ylabel('Spatial lag of ground truth of gene {}'.format(gene))\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bacterial-williams",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(5,5))\n",
+    "moran_scatterplot(moran_loc_bv, p=0.05, ax=ax)\n",
+    "ax.set_xlabel('prediction of gene {}'.format(gene))\n",
+    "ax.set_ylabel('Spatial lag of ground truth of gene {}'.format(gene))\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "extreme-ebony",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_choropleth(gdf, \n",
+    "                    attribute_1,\n",
+    "                    attribute_2,\n",
+    "                    bg_img,\n",
+    "                    alpha=0.5,\n",
+    "                    scheme='Quantiles', \n",
+    "                    cmap='YlGnBu', \n",
+    "                    legend=True):\n",
     "    \n",
-    "    fig = plt.figure()\n",
-    "    plt.subplot(2, 2, 1)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.subplot(2, 2, 2)\n",
-    "    plt.imshow(im_fgnd_mask)\n",
-    "    plt.subplot(2, 2, 3)\n",
-    "    plt.imshow(annotation_h,cmap=\"gray\")\n",
-    "    plt.subplot(2, 2, 4)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.imshow(skimage.color.label2rgb(im_nuclei_seg_mask,\n",
-    "                                       im_fgnd_mask, \n",
-    "                                       bg_label=0),\n",
-    "               alpha=im_fgnd_mask,\n",
-    "               origin='upper')\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cubic-patient",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def watershed_segment(image):\n",
-    "    annotation_hed = rgb2hed(image)\n",
-    "    annotation_h = annotation_hed[:,:,0]\n",
-    "    annotation_h *= 255.0 / np.percentile(annotation_h, q=80)\n",
-    "#     annotation_h = np.clip(annotation_h, a_min=0, a_max=255)\n",
-    "    thresh = skimage.filters.threshold_otsu(annotation_h)\n",
-    "    im_fgnd_mask = sp.ndimage.morphology.binary_fill_holes(\n",
-    "        annotation_h < thresh\n",
-    "    )\n",
-    "    distance = ndi.distance_transform_edt(im_fgnd_mask)\n",
-    "    coords = peak_local_max(distance, footprint=np.ones((5, 5)), labels=im_fgnd_mask)\n",
-    "    mask = np.zeros(distance.shape, dtype=bool)\n",
-    "    mask[tuple(coords.T)] = True\n",
-    "    markers, _ = ndi.label(mask)\n",
-    "    labels = watershed(annotation_h, markers, mask=im_fgnd_mask)\n",
-    "    im_nuclei_seg_mask = area_opening(labels, area_threshold=64).astype(np.int)\n",
-    "    map_dic = dict(zip(np.unique(im_nuclei_seg_mask), np.arange(len(np.unique(im_nuclei_seg_mask)))))\n",
-    "    im_nuclei_seg_mask = np.vectorize(map_dic.get)(im_nuclei_seg_mask)\n",
-    "    return im_nuclei_seg_mask\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "explicit-instrument",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for image, label_ in test_gen.shuffle(200).take(1):\n",
-    "    explanation = explainer.explain_instance(image.numpy().astype(\"double\"), \n",
-    "                                             model_predict_gene(\"COX6C\"), \n",
-    "                                             top_labels=1, num_samples=100)\n",
-    "    dict_heatmap1 = dict(explanation.local_exp[explanation.top_labels[0]])\n",
-    "    heatmap1 = np.vectorize(dict_heatmap1.get)(explanation.segments)\n",
-    "    prediction = model_predict_gene(\"COX6C\")(np.expand_dims(image.numpy(), 0)).ravel()\n",
-    "    print(\"prediction: \" + str(prediction))\n",
-    "    print(\"ground truth: \" + str(label_[0].numpy().ravel()))\n",
-    "    fig = plt.figure()\n",
-    "    plt.subplot(1, 3, 1)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.subplot(1, 3, 2)\n",
-    "    plt.imshow(heatmap1, alpha=1, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.subplot(1, 3, 3)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.imshow(heatmap1, alpha=0.3, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "    fig, axs = plt.subplots(2,1, figsize=(5, 8),\n",
+    "                            subplot_kw={'adjustable':'datalim'})\n",
     "    \n",
-    "    explanation = explainer.explain_instance(image.numpy().astype(\"double\"), \n",
-    "                                             model_predict_gene(\"COX6C\"), \n",
-    "                                             top_labels=1, num_samples=100,\n",
-    "                                             num_features=10000,\n",
-    "                                             segmentation_fn=watershed_segment)\n",
-    "    dict_heatmap1 = dict(explanation.local_exp[explanation.top_labels[0]])\n",
-    "    heatmap1 = np.vectorize(dict_heatmap1.get)(explanation.segments)\n",
-    "    fig = plt.figure()\n",
-    "    plt.subplot(2, 3, 4)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.subplot(2, 3, 5)\n",
-    "    plt.imshow(heatmap1, alpha=1, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.subplot(2, 3, 6)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.imshow(heatmap1, alpha=0.3, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
+    "    # Choropleth for attribute_1\n",
+    "    gdf.plot(column=attribute_1, scheme=scheme, cmap=cmap,\n",
+    "             legend=legend, legend_kwds={'loc': 'upper left',\n",
+    "                                         'bbox_to_anchor': (0.92, 0.8)},\n",
+    "             ax=axs[0], alpha=alpha, markersize=2)\n",
+    "    \n",
+    "    axs[0].imshow(bg_img)\n",
+    "    axs[0].set_title('choropleth plot for {}'.format(attribute_1), y=0.8)\n",
+    "    axs[0].set_axis_off()\n",
+    "    \n",
+    "    # Choropleth for attribute_2\n",
+    "    gdf.plot(column=attribute_2, scheme=scheme, cmap=cmap,\n",
+    "             legend=legend, legend_kwds={'loc': 'upper left',\n",
+    "                                         'bbox_to_anchor': (0.92, 0.8)},\n",
+    "             ax=axs[1], alpha=alpha, markersize=2)\n",
+    "    \n",
+    "    axs[1].imshow(bg_img)\n",
+    "    axs[1].set_title('choropleth plot for {}'.format(attribute_2), y=0.8)\n",
+    "    axs[1].set_axis_off()\n",
+    "    \n",
     "    plt.tight_layout()\n",
-    "    plt.show()"
+    "    \n",
+    "    return fig, ax "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suspended-reggae",
+   "id": "painful-sessions",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene1 = gene_list[6]\n",
-    "gene2 = gene_list[4]\n",
-    "for image, label_ in test_gen.shuffle(2000).take(1):\n",
-    "    explanation = explainer.explain_instance(image.numpy().astype(\"double\"), \n",
-    "                                             model_predict_gene(gene1), \n",
-    "                                             top_labels=1, num_samples=1000,\n",
-    "                                             hide_color=0,\n",
-    "#                                              num_features=10000,\n",
-    "#                                              model_regressor=SGDRegressor(),\n",
-    "                                             segmentation_fn=watershed_segment)\n",
-    "    dict_heatmap1 = dict(explanation.local_exp[explanation.top_labels[0]])\n",
-    "    heatmap1 = np.vectorize(dict_heatmap1.get)(explanation.segments)\n",
-    "    prediction = model_predict_gene(gene1)(np.expand_dims(image.numpy(), 0)).ravel()\n",
-    "    print(\"{}:\".format(gene1))\n",
-    "    print(\"prediction: \" + str(prediction))\n",
-    "    print(\"ground truth: \" + str(label_[6].numpy().ravel()))\n",
-    "    fig = plt.figure()\n",
-    "    plt.subplot(1, 3, 1)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.subplot(1, 3, 2)\n",
-    "    plt.imshow(heatmap1, alpha=1, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.subplot(1, 3, 3)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.imshow(heatmap1, alpha=0.3, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    \n",
-    "    explanation = explainer.explain_instance(image.numpy().astype(\"double\"), \n",
-    "                                             model_predict_gene(gene2), \n",
-    "                                             top_labels=1, num_samples=1000,\n",
-    "                                             hide_color=0,\n",
-    "#                                              num_features=10000,\n",
-    "#                                              model_regressor=SGDRegressor(),\n",
-    "                                             segmentation_fn=watershed_segment)\n",
-    "    dict_heatmap1 = dict(explanation.local_exp[explanation.top_labels[0]])\n",
-    "    heatmap1 = np.vectorize(dict_heatmap1.get)(explanation.segments)\n",
-    "    prediction = model_predict_gene(gene2)(np.expand_dims(image.numpy(), 0)).ravel()\n",
-    "    print(\"{}:\".format(gene2))\n",
-    "    print(\"prediction: \" + str(prediction))\n",
-    "    print(\"ground truth: \" + str(label_[4].numpy().ravel()))\n",
-    "    fig = plt.figure()\n",
-    "    plt.subplot(2, 3, 4)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.subplot(2, 3, 5)\n",
-    "    plt.imshow(heatmap1, alpha=1, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.subplot(2, 3, 6)\n",
-    "    plt.imshow(image.numpy().astype(int))\n",
-    "    plt.imshow(heatmap1, alpha=0.3, cmap = 'RdYlBu_r', vmax=1, vmin=-1)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
-    "    "
+    "plot_choropleth(test_dataset_.obsm[\"gpd\"], \n",
+    "                \"gc_{}\".format(gene),\n",
+    "                \"pred_{}\".format(gene),\n",
+    "                tissue_image)\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "annual-ireland",
+   "id": "exposed-disco",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lisa_cluster(moran_loc_bv, test_dataset_.obsm[\"gpd\"], p=0.05, \n",
+    "             figsize = (9,9), markersize=12, **{\"alpha\":0.8})\n",
+    "plt.imshow(test_dataset_.uns[\"spatial\"][\"block2\"][\"images\"][\"fulres\"])\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "primary-statement",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beneficial-recycling",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "everyday-coral",
    "metadata": {},
    "outputs": [],
    "source": []
