--- a/development/NB_spatial_autocorrelation.ipynb
+++ b/development/NB_spatial_autocorrelation.ipynb
@@ -88,6 +88,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "familiar-lambda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sample1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "arabic-casting",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Sample2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "infinite-financing",
    "metadata": {},
    "outputs": [],
@@ -196,7 +216,7 @@
    "outputs": [],
    "source": [
     "train_history = model.fit(train_gen_,\n",
-    "                          epochs=10,\n",
+    "                          epochs=50,\n",
     "                          validation_data=valid_gen_,\n",
     "                          callbacks=[callback]\n",
     "                          )"
@@ -274,7 +294,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "gene_list[4]"
+    "gene_list[6]"
    ]
   },
   {
