prediction with ensemble of models trained for 100epochs

--- a/development/STimage_Bayes_regression_prediction.ipynb
+++ b/development/STimage_Bayes_regression_prediction.ipynb
@@ -115,19 +115,32 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "6a75617d",
-   "metadata": {
-    "scrolled": false
-   },
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "7307edfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(DATA_PATH / \"all_adata.h5ad\").exists()"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ef201ae6",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "2626e4fc",
    "metadata": {},
+   "outputs": [],
    "source": [
     "adata_all = read_h5ad(DATA_PATH / \"all_adata.h5ad\")"
    ]
@@ -141,9 +154,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "8d0346a9",
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e60dd2df",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# update metadata for annadata such that it maps to the correct location\n",
     "adata_all.obs[\"tile_path\"] = adata_all.obs.tile_path.map(\n",
@@ -152,19 +167,32 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c7b4c6b0",
-   "metadata": {
-    "scrolled": true
-   },
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "69337828",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/scratch/smp/uqsmac12/dataset_breast_cancer_9visium/tiles/1142243F-12601-4511-299.jpeg'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "adata_all.obs[\"tile_path\"][0]"
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "abbec936",
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "96f1aeb1",
    "metadata": {},
+   "outputs": [],
    "source": [
     "# remove FFPE and 1160920F --- the test set\n",
     "adata_all_train_valid = adata_all[adata_all.obs[\"library_id\"].isin(\n",
@@ -172,9 +200,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "ac77b40e",
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5b9f30ad",
    "metadata": {},
+   "outputs": [],
    "source": [
     "n_genes = len(gene_list)\n",
     "\n",
@@ -192,9 +222,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "c0d30653",
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "f625d923",
    "metadata": {},
+   "outputs": [],
    "source": [
     "train_gen = tf.data.Dataset.from_generator(\n",
     "            lambda: DataGenerator(adata=training_dataset, \n",
@@ -228,7 +260,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "533920ff",
+   "id": "30289b46",
    "metadata": {},
    "source": [
     "# instantiate model\n",
@@ -264,7 +296,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "e565029f",
+   "id": "17d6fa3d",
    "metadata": {
     "scrolled": false
    },
@@ -589,7 +621,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "f7e00217",
+   "id": "0794879b",
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +699,7 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "id": "9b1fffba",
+   "id": "b12c179f",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +897,7 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "id": "b2db24a9",
+   "id": "665d07ab",
    "metadata": {},
    "outputs": [
     {
@@ -884,9 +916,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2f3ebb4",
+   "metadata": {},
+   "source": [
+    "## Performance of individual models, for `FFPE`"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 167,
-   "id": "cc660a1b",
+   "id": "6ba39bd4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 170,
-   "id": "892014cf",
+   "id": "eed7200a",
    "metadata": {},
    "outputs": [
     {
@@ -1155,7 +1195,7 @@
   {
    "cell_type": "code",
    "execution_count": 171,
-   "id": "4ffbf59f",
+   "id": "f8e0174b",
    "metadata": {},
    "outputs": [
     {
@@ -1190,7 +1230,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "59865fec",
+   "id": "bec1c1ec",
    "metadata": {},
    "outputs": [
     {
@@ -1224,53 +1264,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
-   "id": "35abd2df",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sr_corr_ffpe = pd.Series(dict_corr_ffpe)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 164,
-   "id": "7722ef4b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "COX6C       0.094464\n",
-       "TTLL12      0.017486\n",
-       "PABPC1      0.207329\n",
-       "GNAS        0.361057\n",
-       "HSP90AB1    0.348422\n",
-       "TFF3        0.230954\n",
-       "ATP1A1      0.278947\n",
-       "B2M        -0.105370\n",
-       "FASN        0.195362\n",
-       "SPARC       0.095023\n",
-       "CD74        0.287319\n",
-       "CD63        0.103898\n",
-       "CD24        0.383454\n",
-       "CD81        0.152394\n",
-       "dtype: float64"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sr_corr_ffpe"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 128,
-   "id": "ad89550f",
+   "id": "8de3efa5",
    "metadata": {},
    "outputs": [
     {
@@ -1302,7 +1297,7 @@
   {
    "cell_type": "code",
    "execution_count": 108,
-   "id": "dae7702d",
+   "id": "1e56b0a0",
    "metadata": {},
    "outputs": [
     {
@@ -1323,20 +1318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b4eb1d5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(nrows=len(gene_list), figsize=(3, 30))\n",
-    "for i, g in enumerate(gene_list):\n",
-    "    ax[i].hist(np_target2[:,0,i], bins=8, label=g)\n",
-    "fig.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe685a17",
+   "id": "7df40e95",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1400,7 +1382,9 @@
    "cell_type": "code",
    "execution_count": 49,
    "id": "4dcf84ea",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1587,7 +1571,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "2f7397d1",
+   "id": "16e71647",
    "metadata": {
     "scrolled": true
    },
@@ -1665,7 +1649,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "26cdc51a",
+   "id": "440309f2",
    "metadata": {},
    "outputs": [
     {
@@ -1693,7 +1677,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "956167f6",
+   "id": "fd451ab2",
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1753,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "d63f153c",
+   "id": "00beacf5",
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1829,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "40df1d9a",
+   "id": "4120ca9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1839,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "6ea50454",
+   "id": "3911a2b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1869,7 +1853,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "f8187199",
+   "id": "4dc57cf5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1884,7 +1868,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "f0989347",
+   "id": "392318a7",
    "metadata": {},
    "outputs": [
     {
@@ -1915,7 +1899,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "8ddc7b70",
+   "id": "351f56c6",
    "metadata": {
     "scrolled": true
    },
@@ -2022,7 +2006,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "ac3a57a5",
+   "id": "d615c9d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2041,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "2bcf1a48",
+   "id": "7a4a71f5",
    "metadata": {},
    "outputs": [
     {
