Cleanup and get pipeline for creating masks into notebook

--- a/development/Xenium_classification/src/pipeline.ipynb
+++ b/development/Xenium_classification/src/pipeline.ipynb
@@ -6,15 +6,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import cv2 as cv2\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import scanpy as sp\n",
+    "import tqdm as tqdm\n",
     "import pathml.ml.hovernet as hn\n",
+    "import squidpy.im as sp_im\n",
     "import spatialdata as sd\n",
+    "import spatialdata.models as sd_m\n",
     "import spatialdata_io as sd_io\n",
+    "import multiscale_spatial_image as msi\n",
     "import spatialdata.transformations as sd_t\n",
-    "import xenium_utils as xu"
+    "import xenium_utils as xu\n",
+    "from PIL import Image"
    ]
   },
   {
@@ -119,7 +125,245 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xu.sdata_load_img_mask(merged, affineT=affineT, img_key='he', expand_px=3)"
+    "# img_sep, mask_sep = xu.sdata_load_img_mask(merged, affineT=affineT, img_key='he', expand_px=3, return_sep=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#mask_sep.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_key = 'he'\n",
+    "shape_key = 'nucleus_boundaries'\n",
+    "label_key = 'celltype_major'\n",
+    "t_shapes = sd_t.Sequence([\n",
+    "  sd_t.get_transformation(merged.shapes[shape_key]),\n",
+    "  sd_t.get_transformation(merged.images[img_key]).inverse()])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapes = sd.transform(merged.shapes[shape_key], t_shapes)\n",
+    "shapes = sd.transform(shapes, affineT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapes.index = shapes.index.astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = merged.table.obs[label_key].to_frame()\n",
+    "labels.index = shapes.index.astype(int)\n",
+    "shapes_df = shapes.merge(labels, how = 'inner', right_index = True, left_index = True)\n",
+    "shapes_df['label'] = shapes_df[label_key].cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shapes_df_dict = {k: v for k, v in shapes_df.groupby(label_key)}      \n",
+    "shapes_df_dict               "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img = merged.images[img_key]\n",
+    "if isinstance(img, msi.multiscale_spatial_image.MultiscaleSpatialImage):\n",
+    "    # Note that this clears any transformation attribute\n",
+    "    img = sd_m.Image2DModel.parse(img[\"scale0\"].ds.to_array().squeeze(axis=0))\n",
+    "img = img.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def new_mask_for_polygons(polygons, im_size, vals):\n",
+    "  print(im_size)\n",
+    "  if not isinstance(vals, (list, tuple, np.ndarray)):\n",
+    "      vals = np.ones_like(polygons)\n",
+    "  img_mask = np.zeros(im_size, np.float64)\n",
+    "  if not polygons:\n",
+    "      print(\"Not polys\")\n",
+    "      return img_mask\n",
+    "  int_coords = lambda x: np.array(x).round().astype(np.int32)\n",
+    "  exteriors = [int_coords(poly.exterior.coords) if poly.geom_type == 'Polygon' \n",
+    "            else int_coords(poly.convex_hull.exterior.coords)\n",
+    "            for poly in polygons]\n",
+    "  interiors = [poly.interiors if poly.geom_type == 'Polygon'\n",
+    "                else poly.convex_hull.interiors\n",
+    "                for poly in polygons]\n",
+    "  interiors = [int_coords(pi.coords) for poly in interiors for pi in poly] # interiors should be [] anyway\n",
+    "  print(f\"Exteriors: {type(exteriors[0])} {exteriors[0]}\")\n",
+    "  print(f\"Interiors: {interiors}\")\n",
+    "  print(f\"Vals {vals}\")\n",
+    "  cv2.fillPoly(img_mask, [exteriors[0]], vals[0])\n",
+    "  for i in range(len(exteriors)):\n",
+    "      cv2.fillPoly(img_mask, [exteriors[i]], vals[i])\n",
+    "  for i in range(len(interiors)):\n",
+    "      cv2.fillPoly(img_mask, [interiors[i]], 0)\n",
+    "  print(f\"Mask: {img_mask} {np.all(img_mask == 0),}\")\n",
+    "  return img_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import islice\n",
+    "\n",
+    "first_five = islice(shapes_df_dict.items(), 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = [\n",
+    "    new_mask_for_polygons(\n",
+    "        v['geometry'].tolist(),\n",
+    "        img.shape[-2:],\n",
+    "        # Add 1 here in case val is 0 (background)\n",
+    "        vals=(v.index.to_numpy() +1).tolist()\n",
+    "    )\n",
+    "    # https://stackoverflow.com/questions/60484383/typeerror-scalar-value-for-argument-color-is-not-numeric-when-using-opencv\n",
+    "    for k, v in first_five\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "  np.all(masks[0] == 0),\n",
+    "  np.all(masks[1] == 0)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks = np.stack(masks)\n",
+    "mask_bg = (np.sum(masks, axis=0) == 0)*1.\n",
+    "mask = np.concatenate((masks, np.expand_dims(mask_bg, axis=0)))\n",
+    "mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\n",
+    "  np.all(masks[0] == 0),\n",
+    "  np.all(masks[1] == 0),\n",
+    "  np.all(masks[2] == 0)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "masks.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "img_mask = xu.sdata_load_img_mask(merged, affineT=affineT, img_key='he', expand_px=3)\n",
+    "img_mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imgc = sp_im.ImageContainer(img_mask)\n",
+    "gen = imgc.generate_equal_crops(size=256, as_array='image', squeeze=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, tile in enumerate(tqdm.tqdm(gen)):\n",
+    "  if i == 311 or i == 312:\n",
+    "    mask = tile[:,:,3:-1]\n",
+    "    # mask = np.moveaxis(tile[:,:,3:], 2, 0)\n",
+    "    print(mask)\n",
+    "    image = Image.fromarray(tile[:,:,:3].astype(np.uint8))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mask"
    ]
   },
   {
